k8s/development-configure.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: spring-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 33065

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-service
  template:
    metadata:
      labels:
        app: spring-service
    spec:
      containers:
        - name: spring-service
          image: camranjuntinase/sa_pr:proyectosa_backend_2.0.1
          ports:
            - containerPort: 33065  # Puerto de tu aplicación Spring

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-service
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-service
  template:
    metadata:
      labels:
        app: mysql-service
    spec:
      containers:
        - name: mysql-service
          image: camranjuntinase/sa_pr:mysql_ticketsys
          ports:
            - containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-service
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-service
  template:
    metadata:
      labels:
        app: react-service
    spec:
      containers:
        - name: react-service
          image: camranjuntinase/sa_pr:proyectosa_frontend_2.0.1
          ports:
            - containerPort: 5173

---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: spring-ingress-ext
#  namespace: default
#  annotations:
#    kubernetes.io/ingress.global-static-ip-name: dev-static-ip
#spec:
#  defaultBackend:
#    service:
#      name: spring-service
#      port:
#        number: 80
#status:
  #loadBalancer: {}

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress-ext
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dev-static-ip
spec:
  rules:
    - host: dev-enviroment.ticketsys-asd.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: spring-service
                port:
                  number: 80
  defaultBackend:
    service:
      name: spring-service
      port:
        number: 80
status:
  loadBalancer: {}
